@@ -1,0 +1,66 @@
+[
+	{
+		"_namespace": "node",
+		"cpu": {
+			"allocatable": {
+				"cores": 3
+			},
+			"capacity": {
+				"cores": 4
+			}
+		},
+		"memory": {
+			"allocatable": {
+				"bytes": 3097786880
+			},
+			"capacity": {
+				"bytes": 4097786880
+			}
+		},
+		"name": "minikube-test",
+		"pod": {
+			"allocatable": {
+				"total": 210
+			},
+			"capacity": {
+				"total": 310
+			}
+		},
+		"status": {
+			"ready": "true",
+			"unschedulable": true
+		}
+	},
+	{
+		"_namespace": "node",
+		"cpu": {
+			"allocatable": {
+				"cores": 2
+			},
+			"capacity": {
+				"cores": 2
+			}
+		},
+		"memory": {
+			"allocatable": {
+				"bytes": 2097786880
+			},
+			"capacity": {
+				"bytes": 2097786880
+			}
+		},
+		"name": "minikube",
+		"pod": {
+			"allocatable": {
+				"total": 110
+			},
+			"capacity": {
+				"total": 110
+			}
+		},
+		"status": {
+			"ready": "true",
+			"unschedulable": false
+		}
+	}
+]
